2005-09-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkrbtree.c (_gtk_rbtree_free): g_free tree->nil as it isn't
	allocated from the allocator like other nodes
	N#19943

2005-09-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkimage.c (gtk_image_expose): unref pixbuf also when rectangles
	don't intersect.
	N#20050

2005-09-28  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_up_down): Free
	new_cursor_path to fix memory leak per keypress.
	N#19981

2005-09-28  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtkentry.c (struct _GtkEntryPrivate): added new member: gint
	hildon_edited_character_position
	(gtk_entry_init) : initialize hildon_edited_character_position to 0
	(gtk_entry_real_insert_text): set hildon_edited_character_position to
	position of inserted character, if conditions met
	(gtk_entry_create_layout): changed display position of inserted
	characters from cursor position to hildon_edited_character_position
	(the real position), when entry has visiblity=FALSE
	N#16999

2005-09-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_finalize):
	unref() pixbuf_expander_{open,closed} to plug memory leak
	N#19667

2005-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_real_destroy): removed reference for
	animation iterator
	(init_tap_and_hold_animation): function now creates the animation
	iterator only once
	(gtk_widget_tap_and_hold_setup): set priv->iter to NULL
	N#19195

2005-09-17  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_build_level): if
	none of the nodes in the new_level are visible, free the level
	again,
	(gtk_tree_model_filter_row_has_child_toggled): remove FIXME.
	N#19416

2005-09-14  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_build_level): don't